fix: add ownerEmail in contact object
